--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         $("#sdata").click(function()
         {
         $.ajax({
-        url: "http://3.138.153.244:3001",
+        url: "http://3.138.153.244:3001/ajax",
         type: "GET",
         data: {"stations":arrStation},
         success: function(data) {
