--- a/index.html
+++ b/index.html
@@ -84,11 +84,17 @@
         var obj;
         var jsonData;
         $(document).ready(function(){
+        $.ajax({
+        url: "http://3.138.153.244:3001",
+        type: "GET",
+        error: function(msg, error) {
+        alert(error); }
+        });
 
         $("#sdata").click(function()
         {
         $.ajax({
-        url: "http://3.138.153.244:3001/ajax",
+        url: "/ajax",
         type: "GET",
         data: {"stations":arrStation},
         success: function(data) {
