--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         $("#sdata").click(function()
         {
         $.ajax({
-        url: "http://3.138.153.244:3001/ajax",
+        url: "/ajax",
         type: "GET",
         data: {"stations":arrStation},
         success: function(data) {
