--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         var jsonData;
         $(document).ready(function(){
         $.ajax({
-        url: "http://3.138.153.244:3001",
+        url: "http://3.138.153.244:3001/html",
         type: "GET",
         error: function(msg, error) {
         alert(error); }
@@ -94,7 +94,7 @@
         $("#sdata").click(function()
         {
         $.ajax({
-        url: "/ajax",
+        url: "http://3.138.153.244:3001",
         type: "GET",
         data: {"stations":arrStation},
         success: function(data) {
