Update and rename seoulsubwaymap-master/index.html to index.html

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 <body>
     <div id="mainViewContainer" width="50%">
-        <embed id="seoulSubwayMap" type="image/svg+xml" src="Seoul_subway_linemap_ko.svg" width="100%" />
+        <embed id="seoulSubwayMap" type="image/svg+xml" src="/seoulsubwaymap-master/Seoul_subway_linemap_ko.svg" width="100%" />
     </div>
 
     <div id="thumbViewContainer">
@@ -172,7 +172,7 @@
                 <line id="line2" stroke="red" stroke-width="2px" x1="0" y1="0" x2="0" y2="0" />
             </g>
         </svg>
-        <embed id="thumbView" type="image/svg+xml" src="Seoul_subway_linemap_ko.svg" class="thumbViewClass" />
+        <embed id="thumbView" type="image/svg+xml" src="/seoulsubwaymap-master/Seoul_subway_linemap_ko.svg" class="thumbViewClass" />
     </div>
     <div><center><input type="button" value="서버 전송" id="sdata"></center></center></div>
     <script>
